# ProtoTrace

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
config/: claim_schema.yaml  demo_tasks.yaml  source_registry.yaml
data/eval/: comparison_results.json  ctgov_amendment_benchmark.md  ctgov_eval_results.json  ctgov_eval_results.md  heldout_rule_engine_results.json  heldout_rule_engine_results.md  objective_summary.md  paper_summary.json  paper_summary.md  pilot_llm_baseline_results.json  pilot_llm_baseline_results.md  test_dataset.json  update_stability_results.json  update_stability_results.md
data/normalized/: cdisc_home.json  ecfr_part_312.json  ema_clinical_trials.json  ema_gcp_qa.json  fda_clinical_protocols.json  fda_clinical_trials_guidance.json  fda_ind_protocol_amendments.json  ich_e6_r3_draft.json  ich_efficacy_guidelines.json  ich_guidelines.json
data/pilot_annotation/: README.md  annotator_worksheet.md  gold_labels_v1.json  heldout_annotator_worksheet.md  heldout_gold_labels_v1.json  heldout_pool_v1.json  per_archetype_f1.json  protocol_pool_v1.json
scripts/: reproduce_paper_eval.py  reset_demo_baseline.py  run_demo_ui.py  run_heldout_eval.py  run_pilot_annotation_eval.py
src/kg_demo/: __init__.py  artifact_store.py  blob_store.py  bootstrap.py  chunker.py  claim_extractor.py  ctgov_eval.py  ctgov_ingest.py  demo_docs.py  demo_eval.py  document_store.py  drafting.py  eval_dataset.py  eval_judge.py  eval_runner.py  graph_export.py  (+17 more)
tests/: test_demo_smoke.py  test_evaluation_integrity.py
(+3 files in other folders)
