[project]
name = "kg-demo"
version = "0.1.0"
description = "Temporal claim-centered GraphRAG scaffold for regulatory protocol authoring"
requires-python = ">=3.10"
dependencies = [
  "azure-storage-blob>=12.29",
  "flask>=3.0",
  "httpx>=0.27",
  "openai>=1.30",
  "pillow>=10.0",
  "pydantic>=2.8",
  "pyyaml>=6.0.1",
  "requests>=2.32",
  "beautifulsoup4>=4.12",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
